Updated on Console Basic Layout

--- a/Marvel_DC_Characters/Marvel_DC_Characters.csproj
+++ b/Marvel_DC_Characters/Marvel_DC_Characters.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="heroes_information_marvel_dc.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
