--- a/Marvel_DC_Characters/Marvel_DC_Characters.csproj
+++ b/Marvel_DC_Characters/Marvel_DC_Characters.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="26.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="heroes_information_marvel_dc.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
